# akros2_teleop

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
akros2_drive/: drive_node.py  ds4_feedback_node.py  joy_feedback_node.py  joy_mode_handler.py  twist_mixer_node.py  twist_mode_handler.py
akros2_teleop/: joy_mode_handler.py  teleop_node.py  twist_mixer_node.py
config/: ds4_twist_params.yaml  ps3_mapping.md  ps3_mapping.txt  ps3_mode_config.yaml  ps3_twist_config.yaml  ps4_mapping.md  ps4_mode_config.yaml  ps4_twist_config.yaml  sn30pro_mapping.md  sn30pro_mode_config.yaml  sn30pro_twist_config.yaml  stadia_mapping.md  stadia_mapping.txt  stadia_mode_config.yaml  stadia_twist_config.yaml  steamdeck_mapping.md  steamdeck_twist_config.yaml  tmusb_mapping.md  tmusb_mapping.txt  twist_mux_config.yaml  twist_mux_locks.yaml  twist_mux_topics.yaml
launch/: akros2_drive_launch.py  drive_launch.py  drive_node_launch.py  joy_launch.py  teleop_launch.py
